@@ -40,6 +40,7 @@ Bug Fixes
  * 'uninitialized value' warnings in checkup phase (pfcmd checkup)
  * got rid of the unused (unuseful) logs/pfdhcplistener_<int> log files. See logs/packetfence.log instead.
  * pfdhcplistener doesn't hang anymore
+ * guest account import didn't work on files with Windows line terminators (\r\n)
 
 --------------------------------------------------------------------------------
 Version 3.3.2 released on 2012-04-23
